--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </nav>
 
         <div class="controls">
-            <button id="themeToggle">🌙</button>
+              <button id="themeToggle" aria-label="Alternar tema" title="Alternar tema">🌙</button>
             <select id="languageSwitch">
                 <option value="pt">PT</option>
                 <option value="en">EN</option>
