--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
         <div class="contato-box slide-up">
             <p><strong>Email:</strong> sugiyamaerick07@gmail.com</p>
-            <p><strong data-lang="linkedin">LinkedIn:</strong> linkedin.com/in/erick-sugiyama</p>
+            <p><strong data-lang="linkedin">LinkedIn:</strong> https://www.linkedin.com/in/erick-sugiyama/</p>
             <p><strong data-lang="telefone">Telefone:</strong> (11) 91424-1614</p>
         </div>
     </section>
