--- a/index.html
+++ b/index.html
@@ -94,27 +94,27 @@
             </div>
 
             <div class="project-card hover-grow reveal">
-                <h3>Análise de Dados – Saúde</h3>
+                <h3>Gerenciado de "Lean Tasks"</h3>
                 <p data-lang="proj2">
-                    EDA e regressão linear para prever despesas médicas.
+                    Site para identificar e eliminar desperdícios na gestão de tarefas.
                 </p>
-                <a class="project-btn" href="#" target="_blank" data-lang="projVer">Ver Projeto</a>
+                <a class="project-btn" href="https://zp1v56uxy8rdx5ypatb0ockcb9tr6a-oci3--5173--365214aa.local-credentialless.webcontainer-api.io" target="_blank" data-lang="projVer">Ver Projeto</a>
             </div>
 
             <div class="project-card hover-grow reveal">
-                <h3>Classificação NLP</h3>
+                <h3>Projeto sobre Piezoeletricidade</h3>
                 <p data-lang="proj3">
-                    Classificação de textos usando Naive Bayes.
+                    Site para apresentação de projeto.
                 </p>
-                <a class="project-btn" href="#" target="_blank" data-lang="projVer">Ver Projeto</a>
+                <a class="project-btn" href="https://preview-piezoeletricidade-kzmixw6s1bit61vquele.vusercontent.net/" target="_blank" data-lang="projVer">Ver Projeto</a>
             </div>
 
             <div class="project-card hover-grow reveal">
-                <h3>Dashboard – Clima</h3>
+                <h3>Projeto de análise de dados e visualização - Tendências do uso de Tecnologias</h3>
                 <p data-lang="proj4">
-                    Dashboard com API Open-Meteo.
+                    Exploraração fictícia da tendência de popularidade das linguagens de programação.
                 </p>
-                <a class="project-btn" href="#" target="_blank" data-lang="projVer">Ver Projeto</a>
+                <a class="project-btn" href="https://anaconda.com/app/share/notebooks/f9af7d67-9d3b-4841-afe7-d1eec82995f4/overview" target="_blank" data-lang="projVer">Ver Projeto</a>
             </div>
 
         </div>
