--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             <div class="project-card hover-grow reveal">
                 <h3>Projeto de análise de dados e visualização - Tendências do uso de Tecnologias</h3>
                 <p data-lang="proj4">
-                    Exploraração fictícia da tendência de popularidade das linguagens de programação.
+                    Exploração fictícia da tendência de popularidade das linguagens de programação.
                 </p>
                 <a class="project-btn" href="https://anaconda.com/app/share/notebooks/f9af7d67-9d3b-4841-afe7-d1eec82995f4/overview" target="_blank" data-lang="projVer">Ver Projeto</a>
             </div>
