--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 <p data-lang="proj2">
                     Site para identificar e eliminar desperdícios na gestão de tarefas.
                 </p>
-                <a class="project-btn" href="https://zp1v56uxy8rdx5ypatb0ockcb9tr6a-oci3--5173--365214aa.local-credentialless.webcontainer-api.io" target="_blank" data-lang="projVer">Ver Projeto</a>
+                <a class="project-btn" href="https://lean-task-manager-wa-4oij.bolt.host" target="_blank" data-lang="projVer">Ver Projeto</a>
             </div>
 
             <div class="project-card hover-grow reveal">
